[workspace]
resolver = "2"
members = ["macros", "objtograph"]

[package]
name = "metis"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dual_link = []
extra_tests = []

[lib]
name = "metis"
path = "src/lib.rs"

[[bin]]
name = "gpmetis"

[dependencies]
macros = {path = "./macros"}
libc = "0.2"
fastrand = "2.0.0"

[dev-dependencies]

[build-dependencies]
cc = "1.0"

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

[profile.release]
# debug = true

[profile.test]
