[workspace]
resolver = "2"
members = ["macros", "metis_proptest", "objtograph"]

[package]
name = "metis"
version = "0.0.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["normalized"]
# make behavior as close as possible to the original so that output can be
# diff'd with the full original in A/B tests. For now, I am not making errors
# the same. Goes together with patches for METIS and GKlib
normalized = []

dual_link = []
extra_tests = []
extra_debug_assertions = []

[lib]
name = "metis"
path = "src/lib.rs"

[[bin]]
name = "gpmetis"
test = false

[[test]]
name = "ab_bin"
required-features = ["normalized"]

[dependencies]
macros = {path = "./macros"}
libc = "0.2"
fastrand = "2.0.0"

[dev-dependencies]

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 1 # to be a little faster and silence FORTIFY_SOURCE warnings
build-override.opt-level = 3 # build scripts and proc-macros.
